--- a/css/style.css
+++ b/css/style.css
@@ -27,19 +27,26 @@ body {
     top: 0;
     pointer-events: none;
     transform: translate(-50%, -50%);
-    box-shadow: 0px 0px 43px 7px rgba(214,133,88,0.75);
-    -webkit-box-shadow: 0px 0px 43px 7px rgba(214,133,88,0.75);
-    -moz-box-shadow: 0px 0px 43px 7px rgba(214,133,88,0.75);
+    box-shadow: 0px 0px 24px 3px rgba(214,133,88,0.75);
+    -webkit-box-shadow: 0px 0px 24px 3px rgba(214,133,88,0.75);
+    -moz-box-shadow: 0px 0px 24px 3px rgba(214,133,88,0.75);
+    transition-duration: 2s;
     transition: .2s;
 }
 
 .cursor2 {
     position: fixed;
     width: 20px;
-    height: 7px;
+    height: 20px;
     left: 0;
     top: 0;
-    background-color: rgb(67, 114, 161);
+    margin-top: -10px;
+    margin-left: -10px;
+    border: 2px dotted #D68558;
+    box-shadow: 0px 0px 43px 7px rgba(214,133,88,0.75);
+    -webkit-box-shadow: 0px 0px 43px 7px rgba(214,133,88,0.75);
+    -moz-box-shadow: 0px 0px 43px 7px rgba(214,133,88,0.75);
+    border-radius: 50%;
     pointer-events: none;
     -webkit-animation: roll .6s linear infinite;
     animation: roll .6s linear infinite;
